[metadata]
name = soctrack
version = attr:soctrack.__version__
description = Social Media Tracker
author = Aarni Koskela
author_email = akx@desucon.fi
url = https://github.com/kcsry/soctrack

[options.packages.find]
include =
    soctrack
    soctrack.*

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    Django>=3.0
    requests
    jsonfield

[yapf]
based_on_style = pep8
column_limit = 119
dedent_closing_brackets = true
space_between_ending_comma_and_closing_bracket = false
spaces_before_comment = 2
split_arguments_when_comma_terminated = true
split_before_logical_operator = true

[pep8]
max-line-length = 120
exclude =*migrations*,*node_modules*
ignore = E309

[flake8]
exclude = .tox,migrations,doc/*,venv/*
max-line-length = 120
max-complexity = 10

[isort]
atomic = true
combine_as_imports = false
indent = 4
known_standard_library = token,tokenize,enum,importlib
known_third_party = django,six
length_sort = false
line_length = 120
multi_line_output = 5
not_skip = __init__.py
order_by_type = false
skip =
    migrations
    node_modules
wrap_length = 120
