[metadata]
name = soctrack
version = attr:soctrack.__version__
description = Social Media Tracker
author = Aarni Koskela
author_email = akx@desucon.fi
url = https://github.com/kcsry/soctrack

[options.packages.find]
include =
    soctrack
    soctrack.*

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    Django>=3.0
    requests
    jsonfield

[isort]
profile = black
multi_line_output = 3
